added default origin

--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -84,6 +84,21 @@ EOF
 {% endif %}
 
 resource "aws_cloudfront_distribution" "this" {
+  origin {
+      domain_name = "${aws_alb.this.dns_name}"
+      origin_id = "tf-{{ organization_name }}-{{ project_type }}-{{ project_deployment_environment }}-{{ project_name }}"
+
+      custom_origin_config {
+        http_port = 80
+        https_port = 443
+        origin_protocol_policy = "https-only"
+        origin_ssl_protocols = [
+          "TLSv1.2",
+          "TLSv1.1",
+          "TLSv1"]
+      }
+
+  }
 {% if cloudfront_s3_origins is defined and cloudfront_s3_origins %}
 {% for origin in cloudfront_s3_origins %}
   origin {
