--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -122,7 +122,7 @@ resource "aws_cloudfront_distribution" "this" {
     min_ttl                = {{ origin.min_ttl }}
     default_ttl            = {{ origin.default_ttl }}
     max_ttl                = {{ origin.max_ttl }}
-    compress               = {{ origin.compress }}
+    compress               = "{{ origin.compress }}"
     viewer_protocol_policy = "{{ origin.viewer_protocol_policy }}"
   }
 {% endfor %}
