--- a/templates/cloudfront_for_alb.tf.j2
+++ b/templates/cloudfront_for_alb.tf.j2
@@ -30,7 +30,7 @@ resource "aws_iam_access_key" "deployer" {
 resource "aws_s3_bucket" "s3" {
 
   provider = "aws.{{ aws_region }}"
-  bucket   = "{{ origin.s3_bucket_name }}"
+  bucket   = "{{ s3_bucket_name }}"
 
   website {
     index_document = "index.html"
@@ -53,7 +53,7 @@ resource "aws_s3_bucket" "s3" {
                 "s3:ListBucket"
             ],
             "Resource": [
-                "arn:aws:s3:::{{ origin.s3_bucket_name }}"
+                "arn:aws:s3:::{{ s3_bucket_name }}"
             ]
         },
         {
@@ -70,7 +70,7 @@ resource "aws_s3_bucket" "s3" {
                 "s3:Delete*"
             ],
             "Resource": [
-                "arn:aws:s3:::{{ origin.s3_bucket_name }}/*"
+                "arn:aws:s3:::{{ s3_bucket_name }}/*"
             ]
         }
     ]
