--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -1,12 +1,12 @@
 variable "cluster-name" {
-  default = "tf-{{ project_type }}"
+  default = "{{ eks_name }}"
   type    = "string"
 }
 
 ########### EKS Master Cluster IAM Role
 
 resource "aws_iam_role" "kube-cluster" {
-  name = "tf-eks-{{ project_type }}"
+  name = "${var.cluster-name}"
 
   assume_role_policy = <<POLICY
 {
@@ -37,7 +37,7 @@ resource "aws_iam_role_policy_attachment" "kube-cluster-AmazonEKSServicePolicy" 
 ###########  EKS Master Cluster Security Group
 
 resource "aws_security_group" "kube-cluster" {
-  name        = "tf-eks-{{ project_type }}"
+  name        = "${var.cluster-name}"
   description = "Cluster communication with worker nodes"
 {% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
@@ -62,7 +62,7 @@ resource "aws_security_group" "kube-cluster" {
   }
 
   tags {
-    Name = "tf-eks-{{ project_type }}"
+    Name = "${var.cluster-name}}"
   }
 }
 
@@ -128,7 +128,7 @@ output "kubeconfig" {
 ########### Worker Node # IAM Role and Instance Profile
 
 resource "aws_iam_role" "kube-node" {
-  name = "tf-eks-{{ project_type }}-node"
+  name = "${var.cluster-name}-node"
 
   assume_role_policy = <<POLICY
 {
@@ -162,14 +162,14 @@ resource "aws_iam_role_policy_attachment" "kube-node-AmazonEC2ContainerRegistryR
 }
 
 resource "aws_iam_instance_profile" "kube-node" {
-  name = "tf-eks-{{ project_type }}-node"
+  name = "${var.cluster-name}-node"
   role = "${aws_iam_role.kube-node.name}"
 }
 
 ########### Worker Node # Security Group
 
 resource "aws_security_group" "kube-node" {
-  name        = "tf-eks-{{ project_type }}-node"
+  name        = "${var.cluster-name}-node"
   description = "Security group for all nodes in the cluster"
 {% if aws_vpc_default == true %}
   vpc_id = "${aws_default_vpc.this.id}"
@@ -186,7 +186,7 @@ resource "aws_security_group" "kube-node" {
 
   tags = "${
     map(
-     "Name", "tf-eks-{{ project_type }}-node",
+     "Name", "{${var.cluster-name}-node",
      "kubernetes.io/cluster/${var.cluster-name}", "owned",
     )
   }"
@@ -274,7 +274,7 @@ resource "aws_launch_configuration" "kube" {
   iam_instance_profile        = "${aws_iam_instance_profile.kube-node.name}"
   image_id                    = "${data.aws_ami.eks-worker.id}"
   instance_type               = "{{ eks_instance_type }}"
-  name_prefix                 = "tf-eks-kube"
+  name_prefix                 = "${var.cluster-name}"
   security_groups             = ["${aws_security_group.kube-node.id}"]
   user_data_base64            = "${base64encode(local.kube-node-userdata)}"
 
@@ -297,7 +297,7 @@ resource "aws_autoscaling_group" "kube" {
 
   tag {
     key                 = "Name"
-    value               = "tf-eks-{{ project_type }}"
+    value               = "${var.cluster-name}"
     propagate_at_launch = true
   }
 
