--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -62,7 +62,7 @@ resource "aws_security_group" "kube-cluster" {
   }
 
   tags {
-    Name = "${var.cluster-name}}"
+    Name = "${var.cluster-name}"
   }
 }
 
