--- a/templates/eks.tf.j2
+++ b/templates/eks.tf.j2
@@ -186,7 +186,7 @@ resource "aws_security_group" "kube-node" {
 
   tags = "${
     map(
-     "Name", "{${var.cluster-name}-node",
+     "Name", "${var.cluster-name}-node",
      "kubernetes.io/cluster/${var.cluster-name}", "owned",
     )
   }"
