--- a/templates/elasticache/cloudflare.tf.j2
+++ b/templates/elasticache/cloudflare.tf.j2
@@ -1,9 +1,9 @@
 resource "cloudflare_record" "redis" {
   domain = "{{ project_env_zone }}"
 {% if project_deployment_environment == 'prod' %}
-  name = "redis.{{ domain_url }}"
+  name = "redis.{{ domain_name }}"
 {% else %}
-  name = "redis.{{ project_deployment_environment }}.{{ domain_url }}"
+  name = "redis.{{ project_deployment_environment }}.{{ domain_name }}"
 {% endif %}
   value = "${aws_elasticache_replication_group.this.primary_endpoint_address}"
   type = "CNAME"
