--- a/templates/elasticache/route53.tf.j2
+++ b/templates/elasticache/route53.tf.j2
@@ -1,12 +1,11 @@
 resource "aws_route53_record" "redis" {
   zone_id = "${data.aws_route53_zone.selected.zone_id}"
 {% if project_deployment_environment == 'prod' %}
-  name = "redis.{{ domain_url }}"
+  name = "redis.{{ domain_name }}"
 {% else %}
-  name = "redis.{{ project_deployment_environment }}.{{ domain_url }}"
+  name = "redis.{{ project_deployment_environment }}.{{ domain_name }}"
 {% endif %}
   type = "CNAME"
-
   ttl = 300
   records = ["${aws_elasticache_replication_group.this.primary_endpoint_address}"]
 }
