--- a/templates/rds/cloudflare.tf.j2
+++ b/templates/rds/cloudflare.tf.j2
@@ -2,12 +2,12 @@
 resource "cloudflare_record" "rds" {
   domain = "{{ project_env_zone }}"
 {% if project_deployment_environment == 'prod' %}
-  name = "rds.{{ domain_url }}"
+  name = "rds.{{ domain_name }}"
 {% else %}
-  name = "rds.{{ project_deployment_environment }}.{{ domain_url }}"
+  name = "rds.{{ project_deployment_environment }}.{{ domain_name }}"
 {% endif %}
 
-{% if project_zone_rds_cluster == true %}
+{% if rds.cluster id defined and rds.cluster == True%}
   value = "${aws_rds_cluster.default.endpoint}"
 {% else %}
   value = "${aws_db_instance.default.address}"
@@ -17,13 +17,13 @@ resource "cloudflare_record" "rds" {
   ttl = 300
 }
 
-{% if project_zone_rds_cluster == true %}
+{% if rds.cluster id defined and rds.cluster == True %}
 resource "cloudflare_record" "rds_reader" {
   domain = "{{ project_env_zone }}"
 {% if project_deployment_environment == 'prod' %}
-  name = "reader.rds.{{ domain_url }}"
+  name = "reader.rds.{{ domain_name }}"
 {% else %}
-  name = "reader.rds.{{ project_deployment_environment }}.{{ domain_url }}"
+  name = "reader.rds.{{ project_deployment_environment }}.{{ domain_name }}"
 {% endif %}
 
   value = "${aws_rds_cluster.default.reader_endpoint}"
