--- a/templates/rds/cluster.tf.j2
+++ b/templates/rds/cluster.tf.j2
@@ -51,28 +51,28 @@ resource "aws_db_subnet_group" "rds_cluster" {
 }
 
 resource "aws_rds_cluster_instance" "this" {
-  count              = 2
+  {% include 'resource.tf.j2' %}
   identifier         = "tf-rds-{{ project_name }}-{{ project_deployment_environment }}-${count.index}"
   cluster_identifier = "${aws_rds_cluster.default.id}"
-  engine  = "{{ db_engine }}"
-  instance_class     = "{{ db_instance_type }}"
+  engine  = "{{ var.engine }}"
+  instance_class     = "{{ var.instance_type }}"
   #db_subnet_group_name = "${aws_db_subnet_group.rds_cluster.name}"
 }
 
 resource "aws_rds_cluster" "default" {
   cluster_identifier = "tf-cluster-rds-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
-  engine  = "{{ db_engine }}"
+  engine  = "{{ var.engine }}"
   skip_final_snapshot = "true"
 
-  database_name      = "{{ db_name }}"
-  master_username    = "{{ db_username }}"
-  master_password    = "{{ db_password }}"
+  database_name      = "{{ var.db_name }}"
+  master_username    = "{{ var.db_username }}"
+  master_password    = "{{ var.db_password }}"
 
   backup_retention_period  = "1"
   preferred_backup_window  = "02:00-03:00"
   preferred_maintenance_window = "wed:03:00-wed:04:00"
 
-  final_snapshot_identifier  = "tf-rds-{{ db_engine }}-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
+  final_snapshot_identifier  = "tf-rds-{{ var.engine }}-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
 
   availability_zones = ["${data.aws_availability_zones.available.names[0]}", "${data.aws_availability_zones.available.names[1]}", "${data.aws_availability_zones.available.names[2]}"]
   vpc_security_group_ids = ["${aws_security_group.rds_security_group.id}"]
