--- a/templates/rds/instance.tf.j2
+++ b/templates/rds/instance.tf.j2
@@ -28,18 +28,19 @@ resource "aws_security_group" "rds_security_group" {
 
 resource "aws_db_instance" "default" {
   identifier = "tf-rds-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
-  engine               = "{{ db_engine }}"
-  engine_version       = "{{ db_engine_version }}"
-  instance_class       = "{{ db_instance_type }}"
-  allocated_storage    = {{ db_allocated_storage_size }}
-  storage_type         = "gp2"
-  name                 = "{{ db_name }}"
-  username             = "{{ db_username }}"
-  password             = "{{ db_password }}"
+  engine               = "{{ var.engine }}"
+  engine_version       = "{{ var.engine_version }}"
+  instance_class       = "{{ var.instance_type }}"
+  allocated_storage    = {{ var.allocated_storage_size }}
+  storage_type         = "{{ var.storage_type }}"
+  name                 = "{{ var.db_name }}"
+  username             = "{{ var.db_username }}"
+  password             = "{{ var.db_password }}"
+  skip_final_snapshot  = "{{ var.skip_final_snapshot }}"
   vpc_security_group_ids = ["${aws_security_group.rds_security_group.id}"]
 
   auto_minor_version_upgrade = "false"
-  final_snapshot_identifier  = "tf-rds-{{ db_engine }}-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
+  final_snapshot_identifier  = "tf-rds-{{ var.engine }}-{{ organization_name }}-{{ project_type }}-{{ project_name }}-{{ project_deployment_environment }}"
   copy_tags_to_snapshot      = "false"
 
 {% if project_deployment_environment == 'prod' %}
