--- a/templates/s3/main.tf.j2
+++ b/templates/s3/main.tf.j2
@@ -1,12 +1,13 @@
-resource "aws_s3_bucket" "website_bucket" {
-
+resource "aws_s3_bucket" "{{name}}" {
+  
   provider = "aws.{{ aws_region }}"
-  bucket   = "{{ s3_bucket_name }}"
-
+  bucket   = "{{ var.bucket_name }}"
+  
   website {
     index_document = "index.html"
   }
-
+  {% include "resource.tf.j2" %}
+  {% include "resource.tf.j2" %}  
   policy  = <<EOF
 {
     "Version": "2012-10-17",
@@ -24,7 +25,7 @@ resource "aws_s3_bucket" "website_bucket" {
                 "s3:ListBucket"
             ],
             "Resource": [
-                "arn:aws:s3:::{{ s3_bucket_name }}"
+                "arn:aws:s3:::{{ var.bucket_name }}"
             ]
         },
         {
@@ -41,7 +42,7 @@ resource "aws_s3_bucket" "website_bucket" {
                 "s3:Delete*"
             ],
             "Resource": [
-                "arn:aws:s3:::{{ s3_bucket_name }}/*"
+                "arn:aws:s3:::{{ var.bucket_name }}/*"
             ]
         }
     ]
@@ -50,7 +51,7 @@ EOF
 
 }
 
-{% include './templates/aws_policies/static_iam_user_policy.tf.j2' %}
+{% include var.bucket_policy_path %}
 
 resource "aws_iam_policy" "site_deployer_policy" {
   provider    = "aws.{{ aws_region }}"
@@ -62,7 +63,7 @@ resource "aws_iam_policy" "site_deployer_policy" {
 
 resource "aws_iam_policy_attachment" "site-deployer-attach-user-policy" {
   provider   = "aws.{{ aws_region }}"
-  name       = "{{ s3_bucket_name }}-deployer-policy"
+  name       = "{{ var.bucket_name }}-deployer-policy"
   users      = ["${aws_iam_user.deployer.name}"]
   policy_arn = "${aws_iam_policy.site_deployer_policy.arn}"
 }
