--- a/templates/rds/instance.tf.j2
+++ b/templates/rds/instance.tf.j2
@@ -36,7 +36,7 @@ resource "aws_db_instance" "default" {
   name                 = "{{ var.db_name }}"
   username             = "{{ var.db_username }}"
   password             = "{{ var.db_password }}"
-  skip_final_snapshot  = "{{ var.skip_final_snapshot }}"
+  skip_final_snapshot  = {{ var.skip_final_snapshot }}
   vpc_security_group_ids = ["${aws_security_group.rds_security_group.id}"]
 
   auto_minor_version_upgrade = "false"
