--- a/templates/header.tf.j2
+++ b/templates/header.tf.j2
@@ -1,33 +1,3 @@
-provider "aws" {
-    region = "{{ aws_region }}"
-    alias = "{{ aws_region }}"
-}
-
-{% if aws_region != "us-east-1" %}
-provider "aws" {
-    region = "us-east-1"
-    alias = "us-east-1"
-}
-{% endif %}
-
+terraform { required_version = ">= 0.11.7" }
+data "aws_region" "current" { current = true }
 data "aws_availability_zones" "available" {}
-
-{% if aws_vpc_default == true %}
-  resource "aws_default_vpc" "this" {
-      tags {
-          Name = "Default VPC"
-      }
-  }
-
-  resource "aws_default_subnet" "a" {
-    availability_zone = "{{ aws_region }}a"
-  }
-
-  resource "aws_default_subnet" "b" {
-    availability_zone = "{{ aws_region }}b"
-  }
-
-  resource "aws_default_subnet" "c" {
-    availability_zone = "{{ aws_region }}c"
-  }
-{% endif %}
